creating game board area UI

--- a/cardGame.html
+++ b/cardGame.html
@@ -8,6 +8,26 @@
     <title>Hackathon Card Game</title>
 </head>
 <body>
+    <div id="title">
+            <h1 id="war-header">WAR</h1>
+    </div>
+
+    <div id="instructions">
+        <h3>How to play....</h3>
+    </div>
+    <div id="details">
+        <div id="player-cards-remaining"></div>
+        <div id="result"></div>
+        <div id="computer-cards-remaining"></div>
+    </div>
+
+    <div id="playing-space">
+        <div id="player-deck"></div>
+        <div id="player-card"></div>
+        <div id="computer-card"></div>
+        <div id="computer-deck"></div>
+    </div>
+
     <div id="deck"></div>
 </body>
 <script src="./script.js"></script>
